# example-python-package

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  Makefile2  README.md  _config.yml  _toc.yml  cookiecutter.json  index.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: build_docs.yml  check_formatting.yml  deploy.yml  deploy_docs.yml  docker-image.yml  pypi.yml  test_package.yml
demo/: add_numbers.ipynb  add_numbers.py  demo.py
docs/: _config.yml  _toc.yml  api.rst  config.yml  github.md  index.md  packaging.md  publishing.md
docs/part1/: coverage.md  linting.md  packaging.md  pre_commit.md  testing.md  typing.md
docs/part2/: citable.md  github.md  issues.md
docs/part3/: auto_api.md  auto_demos.md  documentation.md  publishing.md  publishing_book.md
docs/part4/: conda.md  docker.md  pypi.md
hooks/: post_gen_project.py  pre_gen_project.py
mypackage/: __init__.py  functions.py
src/mypackage/: __init__.py  functions.py
test/: test_code.py
{{cookiecutter.module_name}}/: .flake8  LICENSE  README.md  pyproject.toml
{{cookiecutter.module_name}}/.github/workflows/: build_docs.yml  test_formatting.yml  test_package.yml
{{cookiecutter.module_name}}/docs/: _config.yml  api.rst  index.md
{{cookiecutter.module_name}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  cli.py
{{cookiecutter.module_name}}/tests/: test_import.py
