[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "{{cookiecutter.module_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = [{name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}]
license = {file = "LICENSE"}
readme = "README.md"

{% if cookiecutter.use_argparse|lower == "y" -%}
[project.scripts]
{{cookiecutter.module_name}} = "{{cookiecutter.module_name}}.cli:main"
{%- endif %}

[project.optional-dependencies]
test = [
   {% if cookiecutter.linting|lower == 'y' -%}"mypy",{% endif %}
   {% if cookiecutter.linting|lower == 'y' -%}"flake8",{% endif %}
   {% if cookiecutter.testing|lower == 'y' -%}"pytest",{% endif %}
]


docs = [
   {% if cookiecutter.build_docs|lower == 'y' -%}"jupyter-book",{% endif %}
   {% if cookiecutter.build_docs|lower == 'y' -%}"jupytext",{% endif %}
]